Fix minor layout issue

--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -342,6 +342,7 @@ ul {
 		p {
 			font-size: 14px;
 			line-height: 22px;
+			margin-top: 0;
 		}
 
 		li {
